QOL Issue- Fixed page width being too high
Can no longer scroll horizontally across the page.

--- a/style.css
+++ b/style.css
@@ -114,6 +114,9 @@ body {
   height:auto;
   z-index: 1;
 }
+.BottomBlackImage {
+  width: 100%;
+}
 
 
 
